# BSplineFittingExample

./: CMakeLists.txt  README.md  main.cpp  package.xml
SplineFitting/: CMakeLists.txt  main.cpp
include/bsplinefitting/: cubic_b_spline.h  open_cubic_b_spline.h  spline_curve_fitting.h
src/: cubic_b_spline.cpp  open_cubic_b_spline.cpp  spline_curve_fitting.cpp
