<?xml version="1.0"?>
<package format="2">
  <name>bsplinefitting</name>
  <version>0.0.1</version>
  <description>Spline fitting package</description>
  <maintainer email="developers@sevensense.ch">Sevensense developers</maintainer>
  <license>closed</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>eigen_catkin</depend>
  <depend>libnabo</depend>
</package>
